--- a/backend/services/user-service/Dockerfile
+++ b/backend/services/user-service/Dockerfile
@@ -1,6 +1,7 @@
 FROM eclipse-temurin:21-jre 
 WORKDIR /app
-COPY build/libs/user-service-*.jar app.jar
+ARG JAR_FILE=build/libs/user-service-*.jar
+COPY ${JAR_FILE} app.jar
 EXPOSE 8080
 
 RUN adduser --system springuser
